--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,36 +1,30 @@
 ---
 # Tasks for users role
-- name: Create non-priv user
-  user: name={{ non_priv_user }} generate_ssh_key=yes ssh_key_bits=2048
-  when: non_priv_user is defined
+# Expects user objects with the following keys:
+# username, keys_generate, keys_bits, keys_authorized, is_admin
+- name: Create user accounts
+  user: >
+    name={{ item.username }}
+    generate_ssh_key={{ item.keys_generate|default(true) }}
+    ssh_key_bits={{ item.keys_bits|default(2048) }}
+  with_items: users
 
-- name: Install developer keys for non-priv user
+- name: Install user keys
   copy: >
-      src={{ dev_keys }}
-      dest=/home/{{ non_priv_user }}/.ssh/authorized_keys
-      owner={{ non_priv_user }}
-      group={{ non_priv_user }}
+      src={{ item.keys_authorized }}
+      dest=/home/{{ item.username }}/.ssh/authorized_keys
+      owner={{ item.username }}
+      group={{ item.username }}
       mode=0600
-  when: non_priv_user is defined and dev_keys is defined
+  with_items: users
+  when: item.keys_authorized is defined
 
-- name: Create admin user
-  user: name={{ ops_user }} generate_ssh_key=yes ssh_key_bits=2048
-  when: ops_user is defined
-
-- name: Install admin keys for devops
-  copy: >
-      src={{ ops_keys }}
-      dest=/home/{{ ops_user }}/.ssh/authorized_keys
-      owner={{ ops_user }}
-      group={{ ops_user }}
-      mode=0600
-  when: ops_user is defined and ops_keys is defined
-
-- name: Add admin user to sudoers list
+- name: Add admins to sudoers group
   lineinfile: >
       dest=/etc/sudoers
-      regexp='^{{ ops_user }}'
-      line='{{ ops_user }} ALL=(ALL) NOPASSWD: ALL'
+      regexp='^{{ item.username }}'
+      line='{{ item.username }} ALL=(ALL) NOPASSWD: ALL'
       state=present
       validate='visudo -cf %s'
-  when: ops_user is defined
+  with_items: users
+  when: item.is_admin is defined and item.is_admin
